fix: dark mode bug

--- a/src/css/Modal.module.css
+++ b/src/css/Modal.module.css
@@ -5,6 +5,10 @@
   overflow: hidden;
   width: 280px;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .formGroup {
